--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cnn",
+  "name": "creator-challenge-network",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -8,7 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "14.2.0",
+    "next": "14.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
